--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Donation10">
+        android:theme="@style/Theme.Donation10"
+        android:name="com.example.main.DonationApp">
         <activity
             android:name=".ActivityReport"
             android:exported="true" />
@@ -24,5 +25,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
